Добавлена привязка дома по данным регистрации
